Revert "remove aot for monolith"
This reverts commit 32a701256d0f40a0e85b7e88578cfd1d53091af9.

--- a/character-generator-starter/pom.xml
+++ b/character-generator-starter/pom.xml
@@ -61,4 +61,35 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>native</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-maven-plugin</artifactId>
+						<configuration>
+							<mainClass>${start-class}</mainClass>
+							<image>
+								<builder>paketobuildpacks/builder-jammy-tiny:latest</builder>
+								<env>
+									<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+									<BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
+								</env>
+							</image>
+						</configuration>
+						<executions>
+							<execution>
+								<id>build-image</id>
+								<goals>
+									<goal>build-image</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
