remapping for health endpoint

--- a/monolith/src/main/resources/application.yaml
+++ b/monolith/src/main/resources/application.yaml
@@ -1,3 +1,12 @@
+management:
+  endpoints:
+    web:
+      base-path: /
+      path-mapping:
+        health: health
+      exposure:
+        include:
+          - "health"
 server:
   port: ${SERVER_PORT:0}
 spring:
