♻️ move async into repo

--- a/.gitignore
+++ b/.gitignore
@@ -12,23 +12,8 @@ buildNumber.properties
 /.idea/*
 /database/
 *.iml
-/compose-ui/.gradle/
-/compose-ui/.kotlin/
-/compose-ui/.run/
-/compose-ui/composeApp/build/
-/compose-ui/build/
-/compose-ui/.fleet/
 /.env.base
 /.env
-/character-generator-service-firebase-adminsdk-fbsvc-e6f8e22e01.json
-/api/build
-/base/build
-/character-generator-starter/build
-/data/build
-/data-starter/build
-/genefunk/build
-/genefunk-starter/build
-/security/build
-/security-starter/build
 /build/*
 /.idea/
+/*private.*
