💚 fix service path

--- a/.github/workflows/monolith.yml
+++ b/.github/workflows/monolith.yml
@@ -17,6 +17,6 @@ jobs:
     with:
       build_image: character-generator-service
       service_name: character-generator-service
-      pom_folder: monolith
+      pom_folder: .
       build_native: false
     secrets: inherit
