--- a/.github/workflows/monolith.yml
+++ b/.github/workflows/monolith.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   build-and-deploy:
+    if: github.actor != 'dependabot[bot]'
     uses: Matil86/github-actions/.github/workflows/pipeline-cloud-run-service.yaml@main
     with:
       build_image: character-generator-service
