--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,36 @@
 				<artifactId>kotlinx-coroutines-core-jvm</artifactId>
 				<version>1.10.2</version>
 			</dependency>
+			<dependency>
+				<groupId>io.kotest</groupId>
+				<artifactId>kotest-runner-junit5</artifactId>
+				<version>5.7.2</version>
+			</dependency>
+			<dependency>
+				<groupId>io.kotest</groupId>
+				<artifactId>kotest-assertions-core</artifactId>
+				<version>5.7.2</version>
+			</dependency>
+			<dependency>
+				<groupId>io.mockk</groupId>
+				<artifactId>mockk</artifactId>
+				<version>1.13.8</version>
+			</dependency>
+			<dependency>
+				<groupId>io.kotest</groupId>
+				<artifactId>kotest-runner-junit5-jvm</artifactId>
+				<version>5.7.2</version>
+			</dependency>
+			<dependency>
+				<groupId>io.kotest</groupId>
+				<artifactId>kotest-assertions-core-jvm</artifactId>
+				<version>5.7.2</version>
+			</dependency>
+			<dependency>
+				<groupId>io.mockk</groupId>
+				<artifactId>mockk-jvm</artifactId>
+				<version>1.13.8</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
