🚀 fixing docker and tests

--- a/monolith/Dockerfile
+++ b/monolith/Dockerfile
@@ -1,8 +1,53 @@
-# Production-optimized Dockerfile for PnP Character Generator Service
-# Base image: Amazon Corretto 24 (headless for smaller size)
-FROM amazoncorretto:24-headless
+# Multi-stage Dockerfile for PnP Character Generator Service
+# Supports both CI/CD (pre-built JAR) and local development (build from source)
 
-# Metadata labels
+# ============================================
+# Stage 1: Builder (for building from source)
+# ============================================
+FROM gradle:8.5-jdk24 AS builder
+
+WORKDIR /app
+
+# Copy Gradle Wrapper
+COPY gradlew .
+COPY gradle gradle/
+COPY settings.gradle.kts .
+COPY build.gradle.kts .
+
+# Copy module build files
+COPY api/build.gradle.kts api/
+COPY base/build.gradle.kts base/
+COPY data/build.gradle.kts data/
+COPY genefunk/build.gradle.kts genefunk/
+COPY security/build.gradle.kts security/
+COPY monolith/build.gradle.kts monolith/
+
+# Copy source code
+COPY api/src api/src
+COPY base/src base/src
+COPY data/src data/src
+COPY genefunk/src genefunk/src
+COPY security/src security/src
+COPY monolith/src monolith/src
+
+# Build
+RUN ./gradlew :monolith:bootJar -x test --no-daemon
+
+# Copy the built JAR to a known location
+RUN cp monolith/build/libs/*-spring-boot.jar /app/service.jar
+
+# ============================================
+# Stage 2: Pre-built JAR (for CI/CD)
+# ============================================
+FROM scratch AS prebuilt
+COPY monolith/build/libs/*-spring-boot.jar /app/service.jar
+
+# ============================================
+# Stage 3: Runtime
+# ============================================
+FROM amazoncorretto:24-headless AS runtime
+
+# Metadata
 LABEL maintainer="hipp"
 LABEL org.opencontainers.image.title="PnP Character Generator Service"
 LABEL org.opencontainers.image.description="Spring Boot microservice for pen-and-paper RPG character generation"
@@ -18,8 +63,9 @@ RUN yum install -y --allowerasing shadow-utils curl && \
 # Set working directory
 WORKDIR /app
 
-# Copy the JAR file
-COPY --chown=appuser:appuser build/libs/*-spring-boot.jar service.jar
+# Copy JAR from builder or prebuilt stage
+ARG BUILD_SOURCE=builder
+COPY --from=${BUILD_SOURCE} --chown=appuser:appuser /app/service.jar service.jar
 
 # Switch to non-root user
 USER appuser
@@ -32,7 +78,6 @@ ENV JAVA_OPTS="" \
     SERVER_PORT=8080
 
 # Health check (checks if the application is responding)
-# Adjust the endpoint if your app has a different health check path
 HEALTHCHECK --interval=30s --timeout=3s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:${SERVER_PORT}/actuator/health || exit 1
 
