🚀 lets try that one

--- a/monolith/Dockerfile
+++ b/monolith/Dockerfile
@@ -1,82 +1,62 @@
-# Multi-stage Dockerfile for PnP Character Generator Service (Monolith)
+# syntax=docker/dockerfile:1
+
+# Dockerfile for PnP Character Generator Service (Monolith)
 #
-# IMPORTANT: This Dockerfile must be built from the PROJECT ROOT, not from the monolith folder.
-# Build command: docker build -f monolith/Dockerfile -t pnp-monolith:latest .
-# OR from monolith folder: docker build -f Dockerfile -t pnp-monolith:latest ..
+# DESIGN: Optimized for CI/CD where the JAR is pre-built.
+# Uses BuildKit features for faster builds and better caching.
+#
+# GitHub Actions Workflow (build-cloud-run.yaml) does:
+#   1. ./gradlew build -x test              # From project root - builds ALL modules
+#   2. cd monolith                          # Change to monolith folder
+#   3. docker build -f Dockerfile -t ... .  # Build with context = monolith folder
+#
+# The JAR is already in monolith/build/libs/ from step 1, so we just copy it.
+#
+# Usage for CI/CD:
+#   ./gradlew :monolith:bootJar -x test    # From project root
+#   cd monolith
+#   docker build -t pnp-monolith:latest .  # Context = monolith folder
+#
+# Usage for local development from project root:
+#   ./gradlew :monolith:bootJar -x test
+#   docker build -f monolith/Dockerfile -t pnp-monolith:latest monolith/
 
-# ============================================
-# Stage 1: Builder (builds JAR from source)
-# ============================================
-FROM amazoncorretto:24 AS builder
+FROM amazoncorretto:24-headless
 
-# Install build tools required by Gradle Wrapper
-RUN yum install -y findutils && yum clean all
-
-WORKDIR /app
-
-# Copy Gradle Wrapper (project root files)
-COPY gradlew .
-COPY gradle gradle/
-COPY settings.gradle.kts .
-COPY build.gradle.kts .
-
-# Copy all module build files (Gradle needs these to resolve the dependency graph)
-COPY api/build.gradle.kts api/
-COPY base/build.gradle.kts base/
-COPY data/build.gradle.kts data/
-COPY genefunk/build.gradle.kts genefunk/
-COPY security/build.gradle.kts security/
-COPY monolith/build.gradle.kts monolith/
-
-# Copy source code for all modules (monolith depends on: api, base, data, genefunk, security)
-COPY api/src api/src
-COPY base/src base/src
-COPY data/src data/src
-COPY genefunk/src genefunk/src
-COPY security/src security/src
-COPY monolith/src monolith/src
-
-# Build the monolith JAR (skip tests for Docker build speed)
-RUN ./gradlew :monolith:bootJar -x test --no-daemon
-
-# ============================================
-# Stage 2: Runtime (production container)
-# ============================================
-FROM amazoncorretto:24-headless AS runtime
-
-# Metadata
-LABEL maintainer="hipp"
-LABEL org.opencontainers.image.title="PnP Character Generator Service"
-LABEL org.opencontainers.image.description="Spring Boot monolith for pen-and-paper RPG character generation"
-LABEL org.opencontainers.image.version="1.0-SNAPSHOT"
-
-# Install curl for health checks and create non-root user for security
-RUN yum install -y --allowerasing shadow-utils curl && \
+# Install dependencies with cache mount for faster rebuilds
+RUN --mount=type=cache,target=/var/cache/yum,sharing=locked \
+    yum install -y --allowerasing shadow-utils curl && \
     groupadd -r appuser && \
     useradd -r -g appuser -m -d /home/appuser appuser && \
-    yum clean all && \
-    rm -rf /var/cache/yum
+    yum clean all
 
 WORKDIR /app
 
-# Copy JAR from builder stage
-COPY --from=builder --chown=appuser:appuser /app/monolith/build/libs/*-spring-boot.jar service.jar
+# Copy pre-built JAR
+# Context is the monolith folder, so build/libs/ is relative to that
+COPY --chown=appuser:appuser build/libs/*-spring-boot.jar service.jar
 
-# Switch to non-root user
+# Switch to non-root user for security
 USER appuser
 
 # Expose application port
 EXPOSE 8080
 
-# Environment variables (override at runtime if needed)
+# Environment variables (can be overridden at runtime)
 ENV JAVA_OPTS="" \
     SERVER_PORT=8080
+
+# Metadata (placed later to not invalidate cache on version changes)
+LABEL maintainer="hipp" \
+      org.opencontainers.image.title="PnP Character Generator Service" \
+      org.opencontainers.image.description="Spring Boot monolith for pen-and-paper RPG character generation" \
+      org.opencontainers.image.version="1.0-SNAPSHOT"
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:${SERVER_PORT}/actuator/health || exit 1
 
-# Java 24 requires specific JVM arguments
+# Java 24 requires specific JVM arguments for native access and module access
 ENTRYPOINT ["java", \
     "--enable-native-access=ALL-UNNAMED", \
     "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED", \
