--- a/character-generator-starter/src/main/resources/application.yaml
+++ b/character-generator-starter/src/main/resources/application.yaml
@@ -1,2 +1,29 @@
 server:
-  port: ${SERVER_PORT}
+  port: 8080
+logging:
+  level:
+    com:
+      springframework:
+        web: DEBUG
+        security: DEBUG
+        oauth2: DEBUG
+        boot: DEBUG
+    de:
+      hipp:
+        pnp:
+          auth: DEBUG
+          security:
+            user: DEBUG  # Add this for UserService, UserRepository, and UserListener
+          base:
+            rabbitmq: DEBUG  # Add this for UserInfoProducer
+          rabbitmq: DEBUG  # Add this for other RabbitMQ components
+
+spring:
+  profiles:
+    include: rabbitmq
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://accounts.google.com
+          jwk-set-uri: https://www.googleapis.com/oauth2/v3/certs
