--- a/.github/workflows/pr-risk-router.yml
+++ b/.github/workflows/pr-risk-router.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 jobs:
   classify:
     name: Classify PR Risk
@@ -14,14 +19,14 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Need full history for diff
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.12'
 
       - name: Install dependencies
         run: pip install pyyaml
@@ -31,7 +36,7 @@ jobs:
         run: python .github/scripts/classify_risk.py
 
       - name: Add risk label
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             const riskLevel = '${{ steps.classify.outputs.risk_level }}';
@@ -82,13 +87,17 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up JDK 24
-        uses: actions/setup-java@v3
+      - name: Set up JDK 25
+        uses: actions/setup-java@v4
         with:
           java-version: '25'
           distribution: 'temurin'
+          cache: 'gradle'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Build
         run: ./gradlew build -x test
@@ -100,7 +109,7 @@ jobs:
         run: ./gradlew test
 
       - name: Auto-approve for express lane
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             await github.rest.pulls.createReview({
@@ -119,13 +128,13 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Run standard checks
         run: echo "Standard workflow - see main CI pipeline"
 
       - name: Comment workflow status
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             await github.rest.issues.createComment({
@@ -143,10 +152,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Request manual reviews
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             await github.rest.issues.createComment({
