lets switch to firestore from h2

--- a/monolith/src/main/resources/application.yaml
+++ b/monolith/src/main/resources/application.yaml
@@ -69,7 +69,7 @@ spring:
   application:
     name: pnp-character-generator
   profiles:
-    include: rabbitmq,h2-database,logging,genefunk-crb-locale, genefunk-crb,oauth
+    include: rabbitmq,logging,genefunk-crb-locale, genefunk-crb,oauth
 
 server:
   port: ${SERVER_PORT:0}
